--- a/zhishangceshi.html
+++ b/zhishangceshi.html
@@ -168,7 +168,7 @@
             case 3:
             btnleft.innerText = '是';
             btnright.innerText = '不是';
-            markNum=2
+            markNum=Math.floor(Math.random()*10+1)%2==0?2:0
             break;
             case 0:
             case 1:
